[gd_scene load_steps=12 format=3 uid="uid://de4maqjcmtqn"]

[ext_resource type="FontFile" uid="uid://but58youek45h" path="res://fonts/Montserrat-Bold.ttf" id="1_4aefj"]
[ext_resource type="Script" path="res://scenes/game_raiting.gd" id="1_xb8rj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6kcy"]
bg_color = Color(0, 0.282353, 0.603922, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0flt"]
bg_color = Color(0.705882, 0.862745, 0.952941, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.898039, 0.282353, 0.113725, 1)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3k88i"]
bg_color = Color(0.705882, 0.862745, 0.952941, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77ecb"]
bg_color = Color(0, 0.282353, 0.603922, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_3fb2w"]
Button/styles/focus = SubResource("StyleBoxFlat_q6kcy")
Button/styles/hover = SubResource("StyleBoxFlat_h0flt")
Button/styles/normal = SubResource("StyleBoxFlat_3k88i")
Button/styles/pressed = SubResource("StyleBoxFlat_77ecb")

[sub_resource type="Theme" id="Theme_usraj"]

[sub_resource type="Animation" id="Animation_e68e2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3xegg"]
resource_name = "coverDesapiar"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p4vxj"]
_data = {
"RESET": SubResource("Animation_e68e2"),
"coverDesapiar": SubResource("Animation_3xegg")
}

[node name="GameRaiting" type="CanvasLayer"]
script = ExtResource("1_xb8rj")

[node name="Backround" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.282353, 0.603922, 1)
theme_override_fonts/font = ExtResource("1_4aefj")
theme_override_font_sizes/font_size = 30
text = "Оцените наш сервис!"

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="score" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2/score"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_3fb2w")

[node name="one" type="Button" parent="Control/MarginContainer/VBoxContainer2/score/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_4aefj")
theme_override_font_sizes/font_size = 30
text = "1"

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/score/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="two" type="Button" parent="Control/MarginContainer/VBoxContainer2/score/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_4aefj")
theme_override_font_sizes/font_size = 30
text = "2"

[node name="MarginContainer2" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/score/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="three" type="Button" parent="Control/MarginContainer/VBoxContainer2/score/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_4aefj")
theme_override_font_sizes/font_size = 30
text = "3"

[node name="MarginContainer3" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/score/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="four" type="Button" parent="Control/MarginContainer/VBoxContainer2/score/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_4aefj")
theme_override_font_sizes/font_size = 30
text = "4"

[node name="MarginContainer4" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2/score/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="five" type="Button" parent="Control/MarginContainer/VBoxContainer2/score/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_4aefj")
theme_override_font_sizes/font_size = 30
text = "5"

[node name="MarginContainer2" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonNext" type="Button" parent="Control/MarginContainer/VBoxContainer2/VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(800, 50)
layout_mode = 2
theme = SubResource("Theme_usraj")
theme_override_colors/font_color = Color(0.94902, 0.94902, 0.94902, 1)
theme_override_fonts/font = ExtResource("1_4aefj")
theme_override_font_sizes/font_size = 24
text = "Отправить оценку"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "coverDesapiar"
libraries = {
"": SubResource("AnimationLibrary_p4vxj")
}

[node name="Cover" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/score/HBoxContainer/one" to="." method="_on_one_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/score/HBoxContainer/two" to="." method="_on_two_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/score/HBoxContainer/three" to="." method="_on_three_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/score/HBoxContainer/four" to="." method="_on_four_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/score/HBoxContainer/five" to="." method="_on_five_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/VBoxContainer2/ButtonNext" to="." method="_on_button_next_pressed"]
